--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">code</a>
             <a href="{{ site.baseurl }}/tv">tv</a>
+            <a href="{{ site.baseurl }}/bus">bus</a>
             <a href="{{ site.baseurl }}/about">about</a>
           </nav>
         </header>
