--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,17 @@ body {
   width: 100%;
 }
 
+.img-container {
+  width: 200px;
+  height: 200px;
+  background-color: #0a0a23;
+  text-align: center;
+}
+
+.img-container img {
+  width: 100px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
