--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <a href="{{ site.baseurl }}/tv">tv</a>
             <a href="{{ site.baseurl }}/bus">bus</a>
             <a href="{{ site.baseurl }}/about">about</a>
+            <a href="https://chrissalam.com">resume</a>
           </nav>
         </header>
       </div>
