Add some headings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,9 @@
     </div>
 
     <div id="main" role="main" class="container">
+
+      I’m writing code, primarily in backend and infrastructure as a software engineer.
+      
       {{ content }}
     </div>
 
