Start inflection point question

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
 
     <div id="main" role="main" class="container">
 
-      I’m writing code, primarily in backend and infrastructure as a software engineer.
-      
+      I write code, primarily in backend and infrastructure as a software engineer.
+
       {{ content }}
     </div>
 
