--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <article class="post">
+  I write code, primarily in backend and infrastructure as a software engineer.
+  
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
