Bring in resume

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,6 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
@@ -31,7 +29,7 @@
             <a href="{{ site.baseurl }}/tv">tv</a>
             <a href="{{ site.baseurl }}/bus">bus</a>
             <a href="{{ site.baseurl }}/about">about</a>
-            <a href="https://chrissalam.com">resume</a>
+            <a href="{{ site.baseurl }}/resume">resume</a>
           </nav>
         </header>
       </div>
